Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83016

QLocale fails to set numberOptions from default locale in new object

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.1
    • 5.14.1, 5.14.2, 5.15.0 RC, 5.15.0
    • Core: Locales (i18n)
    • None
    • debian testing
      LANG=pl_PL.UTF-8
      no LC_* variables set
    • Linux/X11
    • 5
    • c7420d9cb8e15d1f094fa92cfab635a86246c670 (qt/qtbase/dev) c39dbabde9d98b805f1d1884d3aeee5c8dcb4d03 (qt/qtbase/5.15)
    • Qt6_Foundation_ Sprint 9, Qt6_Foundation_ Sprint 10

    Description

      Steps to reproduce:

      1. Set default locale with custom number options.
      2. Save the locale as default.
      3. Create new locale with default constructor.
      4. The new locale does not have the numberOptions from the default one.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Eddy Edward Welbourne
              domin144 Dominik Wójt
              Maurice Kalinowski Maurice Kalinowski
              Alex Blasche Alex Blasche
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes